<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">
        <EditText
            android:id="@+id/name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:hint="@string/name"
            android:inputType="textCapWords"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAllCaps="true"
            android:textColor="#607D8B"
            android:textStyle="normal"
            android:text="@string/toppings"
            />
        <CheckBox
            android:id="@+id/toppingsCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:paddingLeft="24dp"
            android:onClick="submitOrder"
            android:textSize="16sp"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/whipped_cream"
            />
        <CheckBox
            android:id="@+id/chocolateCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:paddingLeft="24dp"
            android:onClick="submitOrder"
            android:textSize="16sp"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/chocolate"
            />
        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:textAllCaps="true"
            android:textColor="#607D8B"
            android:textStyle="normal"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context=".MainActivity">

            <Button
                android:id="@+id/button_minus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:layout_marginLeft="16dp"
                android:textSize="16sp"
                tools:ignore="HardcodedText"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="0dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                android:text="2" />

            <Button
                android:id="@+id/button_plus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:textSize="16sp"
                android:text="@string/plus" />
        </LinearLayout>

        <Button
            android:id="@+id/button_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:onClick="submitOrder"
            android:textSize="16sp"
            android:text="@string/order" />

    </LinearLayout>
</ScrollView>
